--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+* {
   color: white;
+  background-color: black;
+  margin: 0;
+  padding: 0;
+}
+.coin-app {
+  justify-content: center;
+  align-items: center;
+  display: block;
 }
 
-.App-link {
-  color: #61dafb;
+.coin-search {
+  position: sticky;
+  top: 0;
+  margin-top: 10px;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 30px;
+  margin-bottom: 40px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.blank {
+  height: 20px;
+  position: sticky;
+  top: 0;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+.coin-input {
+  width: 500px;
+  text-align: center;
+  margin-top: 30px;
+  height: 30px;
+  background-color: grey;
+  font-size: 20px;
+  color: rgb(255, 255, 255) !important;
+}
+::placeholder {
+  color: rgb(39, 39, 39);
 }
